mockito tests for borrowing records